Adjusted _tkinter to compile without warnings when WITH_THREAD is not defined (part of issue #5035)